--- a/authentication-demo-ui/src/main/resources/fxml/idaFXML.fxml
+++ b/authentication-demo-ui/src/main/resources/fxml/idaFXML.fxml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.shape.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.mosip.authentication.demo.service.IdaController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.mosip.authentication.demo.service.IdaController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -17,7 +24,7 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <GridPane prefHeight="552.0" prefWidth="774.0">
+      <GridPane fx:id="parent" prefHeight="552.0" prefWidth="774.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="5.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="90.0" prefWidth="100.0" />
@@ -30,16 +37,20 @@
          <children>
             <AnchorPane prefHeight="50.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <Label layoutX="230.0" layoutY="15.0" text="ID-Authentication Demo Application" />
+                  <Label layoutX="263.0" layoutY="32.0" prefHeight="25.0" prefWidth="285.0" text="ID-Authentication Demo Application" textAlignment="CENTER" AnchorPane.bottomAnchor="31.0" AnchorPane.topAnchor="32.0">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font></Label>
                </children>
             </AnchorPane>
-            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1" vgap="10.0">
+            <GridPane vgap="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" percentHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" percentHeight="40.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" percentHeight="40.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" percentHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
@@ -48,12 +59,15 @@
                      <children>
                         <HBox prefHeight="100.0" prefWidth="200.0" spacing="50.0">
                            <children>
-                              <GridPane prefHeight="40.0" prefWidth="500.0">
+                              <GridPane prefHeight="40.0">
                                 <columnConstraints>
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="30.0" prefWidth="100.0" />
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
-	                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
-	                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
+	                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="12.0" prefWidth="100.0" />
+	                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="12.0" prefWidth="100.0" />
+                                    <ColumnConstraints percentWidth="12.0" />
+                                    <ColumnConstraints percentWidth="15.0" />
+                                    <ColumnConstraints minWidth="10.0" percentWidth="12.0" prefWidth="100.0" />
                                 </columnConstraints>
                                 <rowConstraints>
                                   <RowConstraints minHeight="30.0" prefHeight="40.0" vgrow="SOMETIMES" />
@@ -64,6 +78,8 @@
                                     <CheckBox fx:id="irisAuthType" mnemonicParsing="false" onAction="#onIrisAuth" text="Iris" GridPane.columnIndex="2" />
                                     <CheckBox fx:id="faceAuthType" mnemonicParsing="false" onAction="#onFaceAuth" text="Face" GridPane.columnIndex="3" />
                                     <CheckBox fx:id="otpAuthType" mnemonicParsing="false" onAction="#onOTPAuth" text="OTP" GridPane.columnIndex="4" />
+                                    <CheckBox fx:id="demoAuthType" mnemonicParsing="false" onAction="#onDemoAuth" text="Demographic" GridPane.columnIndex="5" />
+                                    <CheckBox fx:id="eKyc" mnemonicParsing="false" onAction="#onEKyc" text="eKYC" GridPane.columnIndex="6" />
                                  </children>
                               </GridPane>
                            </children>
@@ -99,15 +115,15 @@
                               <ComboBox fx:id="fingerCount" layoutX="110.0" layoutY="24.0" onAction="#onSubTypeSelection" prefWidth="150.0" />
                                <Label ellipsisString="" layoutX="14.0" layoutY="55.0" prefHeight="37.0" prefWidth="131.0" text="Iris Type:" />
                               <ComboBox fx:id="irisCount" layoutX="110.0" layoutY="65.0" onAction="#onSubTypeSelection" prefWidth="150.0" />
-                              <Button fx:id="capture" layoutX="110.0" layoutY="110.0" prefWidth="131.0" mnemonicParsing="false" onAction="#onCapture" text="Capture" />
+                              <Button fx:id="capture" layoutX="110.0" layoutY="110.0" mnemonicParsing="false" onAction="#onCapture" prefWidth="131.0" text="Capture" />
                            </children>
                         </AnchorPane>
                         <AnchorPane fx:id="otpAnchorPane" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: black;" GridPane.columnIndex="2">
                            <children>
                               <Label layoutX="5.0" layoutY="1.0" text="OTP Authentication" />
-                              <Button fx:id="requestOtp" layoutX="14.0" layoutY="24.0" prefWidth="200.0" mnemonicParsing="false" onAction="#onRequestOtp" text="Request OTP" />
+                              <Button fx:id="requestOtp" layoutX="14.0" layoutY="24.0" mnemonicParsing="false" onAction="#onRequestOtp" prefWidth="200.0" text="Request OTP" />
                               <Label layoutX="14.0" layoutY="70.0" text="Enter OTP:" />
-                              <TextField fx:id="otpValue" layoutX="91.0" layoutY="70.0" prefWidth="120.0"/>
+                              <TextField fx:id="otpValue" layoutX="91.0" layoutY="70.0" prefWidth="120.0" />
                            </children>
                            <GridPane.margin>
                               <Insets />
@@ -115,16 +131,28 @@
                         </AnchorPane>
                      </children>
                   </GridPane>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
-                     <children>
-                        <Button fx:id="sendAuthRequest" layoutX="0.0" layoutY="0.0" mnemonicParsing="false" onAction="#onSendAuthRequest" text="Send Auth Request" />
-                        <Button fx:id="reset" layoutX="585.0" layoutY="0.0" mnemonicParsing="false" onAction="#onReset" text="Reset" />
-                     </children>
-                  </AnchorPane>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
                      <children>
+                        <SplitPane dividerPositions="0.5, 0.5" pickOnBounds="false" style="-fx-box-border: transparent;">
+                           <items>
+                              <Button fx:id="sendAuthRequest" mnemonicParsing="false" onAction="#onSendAuthRequest" prefHeight="25.0" prefWidth="134.0" text="Send Auth Request" />
+                              <Button fx:id="reset" mnemonicParsing="false" onAction="#onReset" text="Reset" />
+                              <Button fx:id="ekycResponse" mnemonicParsing="false" onAction="#viewKycResponse" text="View eKyc Response" />
+                           </items>
+                        </SplitPane>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane fx:id="demoAnchorPane" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: black;" GridPane.rowIndex="2">
+                     <children>
+                        <Label layoutX="7.0" layoutY="6.0" text="Demographic Authentication" />
+                        <Label layoutX="14.0" layoutY="30.0" text="Identity Data:" />
+                        <TextArea fx:id="demoInputData" layoutX="85.0" layoutY="27.0" prefHeight="131.0" prefWidth="723.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="30.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
+                     <children>
                         <Label layoutX="0.0" layoutY="0.0" text="Response:" />
-                        <TextField fx:id="responsetextField" layoutX="0.0" layoutY="20.0" prefHeight="39.0" prefWidth="630.0" />
+                        <TextField fx:id="responsetextField" layoutX="0.0" layoutY="20.0" prefHeight="39.0" prefWidth="800.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="10.0" />
                      </children>
                   </AnchorPane>
                </children>
